# babblre

./: .gitignore  .gitmodules  Makefile  README.md  engines.js  engines.wasm  haskell_regex.wasm  icu_regex.js  icu_regex.wasm  index.html  java_regex.js  matrix.js  memo_regex.js  memo_regex.wasm  nim.js  ocaml.js  provenance.json  re2c_regex.js  re2c_regex.wasm  rematch.js  rematch.wasm  rust_regex.wasm  shared.css  shared.js  van.min.js  zig_regex.wasm
.github/workflows/: build.yml  ci.yml  release.yml
api/: protocol.js
api/haskell/: worker.js
api/java/: worker.js
api/js/: worker.js
api/swift/: worker.js
api/wasm/: worker.js
dotnet/: RegexBridge.runtimeconfig.json
dotnet/_framework/: FSharp.Core.wasm  RegexBridge.wasm  Resharp.Runtime.wasm  Resharp.wasm  System.Collections.Concurrent.wasm  System.Collections.wasm  System.Private.CoreLib.wasm  System.Runtime.InteropServices.JavaScript.wasm  System.Text.Encodings.Web.wasm  System.Text.Json.wasm  System.Text.RegularExpressions.wasm  blazor.boot.json  dotnet.native.js.symbols  dotnet.native.wasm
e2e/: app.spec.js  bootstrap.sh  litmus.mjs  package-lock.json  package.json  playwright.config.js  reference-capture.mjs  reference-check.mjs  regex-table.mjs  regex-table.sh  run-reference.sh  run-tests.sh
e2e/node/: host.mjs  install.mjs  (+3 more)
engines/haskell/: Main.hs  Wrapper.hs  tdfa.cabal
etc/: Dockerfile  build-native-engines.sh  check-symbol-shadowing.sh  docker.sh  serve.py  toolchains.sh
js/: browser.js
python/: engines.py
web/: cases.json  index.html  matrix.js  shared.css  shared.js  units.js
(+117 files in other folders)
